Fix LC project spacing.
(omeka/plugin-LocalContexts#3)

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -1154,4 +1154,8 @@ body.menu-open {
     width: 100%;
 }
 
+.local-contexts-project {
+    margin-top: $spacing-unit;
+}
+
 /* @end */
